<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9CCC4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/please_fill_in_the_information_below"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text"
                android:paddingTop="10dp"
                android:text="Phone :"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_label"
                android:ems="10"
                android:hint="@string/enter_phone_no"
                android:inputType="phone"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_text"
                android:paddingTop="10dp"
                android:text="Address:"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_address"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_text"
                android:paddingTop="10dp"
                android:text="Email Address:"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text"
                android:paddingTop="10dp"
                android:text="Date of Birth :"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Enter_birth_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender :"
                android:layout_below="@id/birth_date"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingTop="10dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Female  "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male  "
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select your Blood Type :  "
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@id/Female"
                android:paddingTop="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/A_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/B_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="B"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/AB_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AB"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/o_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="O"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:onClick="showToast"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>